--- a/.github/workflows/main_mscarpool.yml
+++ b/.github/workflows/main_mscarpool.yml
@@ -30,13 +30,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
-      - name: Initialize and apply database migrations
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          flask db init
-          flask db migrate -m "Initial migration."
-          flask db upgrade
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -55,9 +49,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -68,17 +60,10 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_21CD0A698B93429887B0108BBEDD8CD8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9C94B47C812A47588C4F809949CDB5FA }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_366E9A06CEE44500AC8674D66736A326 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'mscarpool'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D7311CE2BDD84AF3BE35AFD63E0DEF29 }}
